<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000">
    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="#FF212121"
        android:id="@+id/area_wifi_headerviewgeneral"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </View>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/apTitle"
        android:textSize="15dp"
        android:textColor="#019688"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apBSSID"
        android:textSize="15dp"
        android:textColor="#019688"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/areafreqheader"
        android:text="@string/area_wifi_areafreqheader"
        android:textColor="#ffffffff"
        android:layout_below="@+id/area_wifi_headerviewgeneral"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apFREQ"
        android:textColor="#ffffffff"
        android:layout_below="@+id/area_wifi_headerviewgeneral"
        android:layout_toRightOf="@+id/areafreqheader"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/areafreqheaderunit"
        android:text="@string/area_wifi_areafreqheaderunit"
        android:textColor="#ffffffff"
        android:layout_below="@+id/area_wifi_headerviewgeneral"
        android:layout_toRightOf="@+id/apFREQ"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ChannelHeader"
        android:text="@string/area_wifi_areachannelheader"
        android:textColor="#ffffffff"
        android:layout_below="@+id/apTitle"
        android:layout_toLeftOf="@+id/apCHANNEL"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apCHANNEL"
        android:textColor="#ffffffff"
        android:layout_below="@+id/apTitle"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:text="@string/status_wifi_RSSI"
        android:id="@+id/area_wifi_RSSI"
        android:layout_below="@+id/areafreqheader"
        android:layout_toLeftOf="@+id/apRSSI"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:id="@+id/apRSSI"
        android:layout_below="@+id/areafreqheader"
        android:layout_toLeftOf="@+id/area_wifi_RSSI_unit" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:text="@string/status_wifi_RSSI_unit"
        android:id="@+id/area_wifi_RSSI_unit"
        android:layout_below="@+id/areafreqheader"
        android:layout_alignParentRight="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:text="@string/status_wifi_percent"
        android:id="@+id/area_wifi_percent"
        android:layout_below="@+id/areafreqheader"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:id="@+id/area_wifi_percentval"
        android:layout_below="@+id/areafreqheader"
        android:layout_toRightOf="@+id/area_wifi_percent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:text="@string/status_wifi_percent_unit"
        android:id="@+id/area_wifi_percentunit"
        android:layout_below="@+id/areafreqheader"
        android:layout_toRightOf="@+id/area_wifi_percentval"
        />
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/area_wifi_progressBarrssi"
        android:layout_below="@+id/area_wifi_percent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:text=""
        android:id="@+id/area_wifi_blank"
        android:layout_below="@+id/area_wifi_progressBarrssi"
        />

</RelativeLayout>