<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000">
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#FF212121"
            android:id="@+id/settings_headergeneral"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF019688"
            android:text="@string/settings_header_general"
            android:textSize="15dp"
            android:id="@+id/settings_headergeneralval"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:id="@+id/spacertop"
            android:background="#ff000000"
            android:layout_below="@+id/settings_headergeneral">
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/roamingprofile_prompt"
            android:textSize="15dp"
            android:id="@+id/roamingprofileheader"
            android:layout_below="@+id/spacertop"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="#FF019688"
            android:id="@+id/roamingprofilespinner"
            android:entries="@array/roamingprofilespinner"
            android:spinnerMode="dialog"
            android:prompt="@string/roamingprofile_prompt"
            android:layout_below="@+id/spacertop"
            android:layout_alignParentRight="true"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:textColor="#FFFF0000"
            android:text="@string/roamingprofile_warningprompt"
            android:textSize="15dp"
            android:id="@+id/roamingprofilewarning"
            android:layout_below="@+id/roamingprofilespinner"
            android:layout_alignParentLeft="true"
            android:visibility="invisible"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/inapprefresh_switch"
            android:textSize="15dp"
            android:id="@+id/inapprefreshswitchheader"
            android:layout_below="@+id/roamingprofilewarning"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textColor="#FFFFFFFF"
            android:id="@+id/inapprefreshswitch"
            android:layout_below="@+id/roamingprofilewarning"
            android:layout_alignParentRight="true"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#FF212121"
            android:id="@+id/settings_headerservice"
            android:layout_below="@+id/inapprefreshswitchheader"
            android:layout_alignParentLeft="true">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF019688"
            android:text="@string/settings_header_service"
            android:textSize="15dp"
            android:id="@+id/settings_headerserviceval"
            android:layout_below="@+id/inapprefreshswitchheader"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/servicerefresh_switch"
            android:textSize="15dp"
            android:id="@+id/servicerefreshswitchheader"
            android:layout_below="@+id/settings_headerserviceval"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textColor="#FFFFFFFF"
            android:id="@+id/servicerefreshswitch"
            android:layout_below="@+id/settings_headerserviceval"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:id="@+id/inapprefreshswitchspacer"
            android:layout_below="@+id/servicerefreshswitch"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/inapprefresh_prompt"
            android:textSize="15dp"
            android:id="@+id/inapprefreshspinnerheader"
            android:layout_below="@+id/inapprefreshswitchspacer"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="#FF019688"
            android:id="@+id/inapprefreshspinner"
            android:entries="@array/inapprefreshspinner"
            android:spinnerMode="dialog"
            android:prompt="@string/inapprefresh_prompt"
            android:layout_below="@+id/inapprefreshswitchspacer"
            android:layout_alignParentRight="true"

            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:id="@+id/spacer1"
            android:background="#ff000000"
            android:layout_below="@+id/inapprefreshspinnerheader">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/servicerefresh_prompt"
            android:textSize="15dp"
            android:id="@+id/serviceintervalheader"
            android:layout_below="@+id/spacer1"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="#FF019688"
            android:id="@+id/serviceintervalspinner"
            android:entries="@array/servicerefreshspinner"
            android:spinnerMode="dialog"
            android:prompt="@string/servicerefresh_prompt"
            android:layout_below="@+id/spacer1"
            android:layout_alignParentRight="true"

            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:id="@+id/spacer2"
            android:background="#ff000000"
            android:layout_below="@+id/serviceintervalheader">
        </View>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#FF212121"
            android:id="@+id/settings_headerdebug"
            android:layout_below="@+id/spacer2"
            android:layout_alignParentLeft="true"
            android:visibility="invisible">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF019688"
            android:text="@string/settings_header_debug"
            android:textSize="15dp"
            android:id="@+id/settings_headerdebugval"
            android:layout_below="@+id/spacer2"
            android:layout_alignParentLeft="true"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/emaildebugs_prompt"
            android:textSize="15dp"
            android:id="@+id/emaildebugsswitchheader"
            android:layout_below="@+id/settings_headerdebug"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:visibility="invisible"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textColor="#FFFFFFFF"
            android:id="@+id/emaildebugsswitch"
            android:layout_below="@+id/settings_headerdebug"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#FF212121"
            android:id="@+id/settings_headeradvanced"
            android:layout_below="@+id/settings_headerdebug"
            android:layout_alignParentLeft="true">>
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF019688"
            android:text="@string/settings_header_advanced"
            android:textSize="15dp"
            android:id="@+id/settings_headeradvancedval"
            android:layout_below="@+id/settings_headerdebug"
            android:layout_alignParentLeft="true" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:id="@+id/spacer3"
            android:background="#ff000000"
            android:layout_below="@+id/settings_headeradvanced">
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:text="@string/RSSI_prompt"
            android:textSize="15dp"
            android:id="@+id/RSSIspinnerheader"
            android:layout_below="@+id/spacer3"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="#FF019688"
            android:id="@+id/RSSIspinner"
            android:entries="@array/RSSIspinner"
            android:spinnerMode="dialog"
            android:prompt="@string/RSSI_prompt"
            android:layout_below="@+id/spacer3"
            android:layout_alignParentRight="true"

            />
    </RelativeLayout>
</ScrollView>